--- a/frontend/src/components/panes.css
+++ b/frontend/src/components/panes.css
@@ -77,7 +77,7 @@
 
 .pane .message {
   padding: 4px 8px;
-  border-left: 2px solid #005faf;
+  border-left: 2px solid #ffe40a;
 
   font-family: 'Roboto Mono';
   font-style: normal;
@@ -100,7 +100,7 @@
 }
 
 .pane strong {
-  color: #005faf;
+  color: #ffe40a;
   font-weight: normal;
 }
 
@@ -115,7 +115,7 @@
   /* accent */
   border: 0;
   border-radius: 0;
-  border-left: 2px solid #005faf;
+  border-left: 2px solid #ffe40a;
 }
 
 .pane .lane {
